# dll-howto

./: CMakeLists.txt  README.md  test.cpp
.github/workflows/: cmake.yml
A/: A.cpp  A.hpp  CMakeLists.txt
B/: B.cpp  B.def  B.hpp  CMakeLists.txt
C/: C.cpp  C.hpp  CMakeLists.txt
